--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2024"
 [dependencies]
 cozy-chess = "0.3"
 ndarray = "0.17.2"
-ort = "2.0.0-rc.11"
+ort = { version = "2.0.0-rc.11", features = ["cuda"] }
 openssl = { version = "0.10", features = ["vendored"] }
